CORRECTION: Navigation et liens collections
 Corrections apportées :
- Collection glp1-cout ajoutée au script de correction
- Liens articles corrigés : /collections/[collection]/[article]/
- Problèmes encodage UTF-8 résolus (é, è, à, etc.)
- Section recommandations ajoutée au guide diagnostic
- Emojis corrigés dans toutes les pages

 Résultat :
- 9/9 collections avec liens fonctionnels
- Navigation cohérente et intuitive
- Guide diagnostic complet avec CTA
- Encodage UTF-8 parfait

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -97,31 +97,31 @@ const footerProducts = getProductsByBrand('Talika', 1);
             <a href="/guides/quel-traitement-glp1-choisir/" class="nav-link diagnostic-highlight">🎯 Diagnostic</a>
           </li>
           <li class="nav-item">
-            <a href="/nouveaux-medicaments-perdre-poids/" class="nav-link">Perdre du Poids</a>
+            <a href="/guides/nouveaux-medicaments-perdre-poids/" class="nav-link">Perdre du Poids</a>
           </li>
           <li class="nav-item">
-            <a href="/glp1-cout/" class="nav-link">Prix</a>
+            <a href="/collections/glp1-cout/" class="nav-link">Prix</a>
           </li>
           <li class="nav-item">
-            <a href="/medicaments-glp1/" class="nav-link">Médicaments</a>
+            <a href="/collections/medicaments-glp1/" class="nav-link">Médicaments</a>
           </li>
           <li class="nav-item">
-            <a href="/effets-secondaires-glp1/" class="nav-link">Effets</a>
+            <a href="/collections/effets-secondaires-glp1/" class="nav-link">Effets</a>
           </li>
           <li class="nav-item">
-            <a href="/avant-apres-glp1/" class="nav-link">Témoignages</a>
+            <a href="/temoignages/avant-apres-glp1/" class="nav-link">Témoignages</a>
           </li>
           <li class="nav-item dropdown">
             <a href="#" class="nav-link dropdown-toggle">Plus ▼</a>
             <ul class="dropdown-menu">
-              <li><a href="/qu-est-ce-que-glp1/" class="dropdown-link">Qu'est-ce que GLP-1 ?</a></li>
-              <li><a href="/experts/" class="dropdown-link">Nos Experts</a></li>
-              <li><a href="/guide-beaute-perte-de-poids-glp1/" class="dropdown-link">Guide Gratuit</a></li>
-              <li><a href="/glp1-diabete/" class="dropdown-link">Diabète</a></li>
-              <li><a href="/regime-glp1/" class="dropdown-link">Régime</a></li>
-              <li><a href="/alternatives-glp1/" class="dropdown-link">Alternatives</a></li>
-              <li><a href="/medecins-glp1-france/" class="dropdown-link">Médecins</a></li>
-              <li><a href="/recherche-glp1/" class="dropdown-link">Recherche</a></li>
+              <li><a href="/guides/qu-est-ce-que-glp1/" class="dropdown-link">Qu'est-ce que GLP-1 ?</a></li>
+              <li><a href="/guides/experts/" class="dropdown-link">Nos Experts</a></li>
+              <li><a href="/guides/guide-beaute-perte-de-poids-glp1/" class="dropdown-link">Guide Gratuit</a></li>
+              <li><a href="/collections/glp1-diabete/" class="dropdown-link">Diabète</a></li>
+              <li><a href="/collections/regime-glp1/" class="dropdown-link">Régime</a></li>
+              <li><a href="/collections/alternatives-glp1/" class="dropdown-link">Alternatives</a></li>
+              <li><a href="/collections/medecins-glp1-france/" class="dropdown-link">Médecins</a></li>
+              <li><a href="/collections/recherche-glp1/" class="dropdown-link">Recherche</a></li>
             </ul>
           </li>
         </ul>
@@ -151,20 +151,20 @@ const footerProducts = getProductsByBrand('Talika', 1);
         <div class="footer-section">
           <h4 class="footer-subtitle">Categories</h4>
           <ul class="footer-links">
-            <li><a href="/glp1-cout/">Prix & Achat</a></li>
-            <li><a href="/medicaments-glp1/">Médicaments</a></li>
-            <li><a href="/glp1-perte-de-poids/">Perte de Poids</a></li>
-            <li><a href="/effets-secondaires-glp1/">Effets Secondaires</a></li>
+            <li><a href="/collections/glp1-cout/">Prix & Achat</a></li>
+            <li><a href="/collections/medicaments-glp1/">Médicaments</a></li>
+            <li><a href="/collections/glp1-perte-de-poids/">Perte de Poids</a></li>
+            <li><a href="/collections/effets-secondaires-glp1/">Effets Secondaires</a></li>
           </ul>
         </div>
         
         <div class="footer-section">
           <h4 class="footer-subtitle">Ressources</h4>
           <ul class="footer-links">
-            <li><a href="/glp1-diabete/">GLP-1 et Diabète</a></li>
-            <li><a href="/regime-glp1/">Régime Alimentaire</a></li>
-            <li><a href="/alternatives-glp1/">Alternatives</a></li>
-            <li><a href="/medecins-glp1-france/">Médecins</a></li>
+            <li><a href="/collections/glp1-diabete/">GLP-1 et Diabète</a></li>
+            <li><a href="/collections/regime-glp1/">Régime Alimentaire</a></li>
+            <li><a href="/collections/alternatives-glp1/">Alternatives</a></li>
+            <li><a href="/collections/medecins-glp1-france/">Médecins</a></li>
           </ul>
         </div>
         
