Fix: Correction liens ozempic-prix et affiliation admin

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -97,7 +97,7 @@ const footerProducts = getProductsByBrand('Talika', 1);
             <a href="/guides/quel-traitement-glp1-choisir/" class="nav-link diagnostic-highlight">🎯 Diagnostic</a>
           </li>
           <li class="nav-item">
-            <a href="/guides/nouveaux-medicaments-perdre-poids/" class="nav-link">Perdre du Poids</a>
+            <a href="/glp1-perte-de-poids/" class="nav-link">Perdre du Poids</a>
           </li>
           <li class="nav-item">
             <a href="/collections/glp1-cout/" class="nav-link">Prix</a>
